--- a/Endmer/Views/Urunler/Index.cshtml
+++ b/Endmer/Views/Urunler/Index.cshtml
@@ -43,6 +43,7 @@
                                     <th>Ürün</th>
                                     <th>Marka</th>
                                     <th>Model</th>
+                                    <th>Adet</th>
                                     <th colspan="3">İşlemler</th>
                                 </tr>
                             </thead>
@@ -55,6 +56,7 @@
                                         <td>@x.URUNADI</td>
                                         <td>@x.MARKA</td>
                                         <td>@x.MODEL</td>
+                                        <td>@x.ADET</td>
                                         <td><a href="/Urunler/UrunDetay/@x.ID" class="btn btn-primary">Detay</a></td>
                                         <td>@Html.ActionLink("Sil", "UrunSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Ürünü Silmek İstediğinize Emin Misiniz?')" })</td>
                                         <td><a href="/Urunler/UrunGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
