Personelin üstündeki zimmeti başka personele aktarma işlemi için menü hazırlandı.

--- a/Endmer/Views/Personel/Index.cshtml
+++ b/Endmer/Views/Personel/Index.cshtml
@@ -55,7 +55,7 @@
                                         <td>@x.LOKASYON</td>
                                         <td><a href="/Personel/PersonelGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
                                         <td>@Html.ActionLink("Sil", "PersonelSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Personeli Silmek İstediğinize Emin Misiniz?')" })</td>
-                                        <td><a href="/Personel/PersonelZimmet/@x.ID" class="btn btn-primary">Zimmet</a></td>
+                                        <td><a href="/Personel/PersonelZimmet/@x.ID" class="btn btn-primary">Zimmetler</a></td>
                                     </tr>
                                 </tbody>
                             }
