--- a/Endmer/Views/Personel/PersonelZimmet.cshtml
+++ b/Endmer/Views/Personel/PersonelZimmet.cshtml
@@ -11,7 +11,7 @@
         <div class="col-12">
             <div class="card mb-4">
                 <div class="card-header">
-                    <h6 class="text-center fs-4">Kategoriye Ait Ürünler</h6>
+                    <h6 class="text-center fs-4">Personele Zimmetli Ürünler</h6>
                 </div>
                 <div class="card-body px-0 pt-0 pb-2">
                     <div class="table-responsive p-0">
