--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="~/template/assets/img/apple-icon.png">
     <link rel="icon" type="image/png" href="~/template/assets/img/favicon.png">
     <title>
-        Endmer Endüstri Merkezi
+        Endmer | Endüstri Merkezi
     </title>
     <!--     Fonts and icons     -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700" rel="stylesheet" />
