Personelin üstündeki zimmetli ürünü başka personele aktarma işlemi eklendi.

--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -65,6 +65,15 @@
                     </li>
 
                     <li class="nav-item">
+                        <a id="onaylar" class="nav-link " href="/Onaylar/Index">
+                            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="ni ni-building text-danger text-sm opacity-10"></i>
+                            </div>
+                            <span class="nav-link-text ms-1">Onaylar</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a id="urunler" class="nav-link " href="/Urunler/Index">
                             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
                                 <i class="ni ni-app text-info text-sm opacity-10"></i>
