--- a/Endmer/Views/Urunler/UrunEkle.cshtml
+++ b/Endmer/Views/Urunler/UrunEkle.cshtml
@@ -20,48 +20,48 @@
 
                             <form method="post" action="/Urunler/UrunEkle" enctype="multipart/form-data">
                                 <div class="row mb-3">
-                                    <div class="col-6">
+                                    <div class="col-sm-12 col-md-6 col-lg-6">
                                         <label class="form-label">Ürün Adı</label>
                                         <input type="text" class="form-control" name="URUNADI" placeholder="Ürün Adı.." required />
                                     </div>
 
-                                    <div class="col-6">
+                                    <div class="col-sm-12 col-md-6 col-lg-6">
                                         <label class="form-label">Resim</label>
                                         <input type="file" class="form-control" name="RESIM" />
                                     </div>
                                 </div>
 
                                 <div class="row mb-3">
-                                    <div class="col-4">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Kategori</label>
                                         @Html.DropDownListFor(x => x.Tbl_Kategoriler.ID, (List<SelectListItem>)ViewBag.Category, new { @class = "form-select" })
                                     </div>
 
-                                    <div class="col-4">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Marka</label>
                                         <input type="text" class="form-control" name="MARKA" placeholder="Marka.." required />
                                     </div>
 
-                                    <div class="col-4">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Model</label>
                                         <input type="text" class="form-control" name="MODEL" placeholder="Model.." required />
                                     </div>
                                 </div>
 
                                 <div class="row mb-3">
-                                    <div class="col-4">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Barkod</label>
                                         <input type="text" class="form-control" name="BARKODNO" placeholder="Barkod.." required />
                                     </div>
 
-                                    <div class="col-4">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Seri No</label>
                                         <input type="text" class="form-control" name="SERINO" placeholder="Seri No.." required />
                                     </div>
 
-                                    <div class="col-4">
-                                        <label class="form-label">Zimmet Sahibi</label>
-                                        @Html.DropDownListFor(x => x.Tbl_Personel.ID, (List<SelectListItem>)ViewBag.Debit, new { @class = "form-select" })
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Adet</label>
+                                        <input type="text" class="form-control" name="ADET" placeholder="Adet.." required />
                                     </div>
                                 </div>
 
