--- a/Endmer/Views/Onaylar/Index.cshtml
+++ b/Endmer/Views/Onaylar/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Endmer.Models.Entity
 @using PagedList
 @using PagedList.Mvc
-@model PagedList.IPagedList<Tbl_Zimmetler>
+@model PagedList.IPagedList<Tbl_ZimmetAktar>
 
 @{
     ViewBag.Title = "Index";
@@ -14,7 +14,7 @@
             <div class="card mb-4">
 
                 <div class="card-header">
-                    <h6 class="text-center fs-4">Zimmetlerim</h6>
+                    <h6 class="text-center fs-4">Bekleyen Onaylar</h6>
                 </div>
 
                 <div class="row">
@@ -34,26 +34,33 @@
                         <table class="table table-hover align-items-center mb-0">
                             <thead align="center">
                                 <tr>
-                                    <th>Resim</th>
+                                    <th>Devreden Personel</th>
+                                    <th>Devralan Personel</th>
                                     <th>Ürün</th>
                                     <th>Marka</th>
                                     <th>Model</th>
+                                    <th>Barkod</th>
                                     <th>Adet</th>
-                                    <th>Durum</th>
-                                    <th colspan="1">İşlemler</th>
+                                    <th>Lokasyon</th>
+                                    <th>Tarih</th>
+                                    <th colspan="2">İşlemler</th>
                                 </tr>
                             </thead>
                             @foreach (var x in Model)
                             {
                                 <tbody align="center">
                                     <tr>
-                                        <td><img src="@x.Tbl_Urunler.RESIM" class="img-fluid" /></td>
+                                        <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
+                                        <td>@x.Tbl_Personel1.AD @x.Tbl_Personel1.SOYAD</td>
                                         <td>@x.Tbl_Urunler.URUNADI</td>
                                         <td>@x.Tbl_Urunler.MARKA</td>
                                         <td>@x.Tbl_Urunler.MODEL</td>
+                                        <td>@x.Tbl_Urunler.BARKODNO</td>
                                         <td>@x.ADET</td>
-                                        <td>@x.ONAYMESAJ</td>
-                                        <td><a href="/Zimmetlerim/Aktar/@x.ID" class="btn btn-warning">Aktar</a></td>
+                                        <td>@x.Tbl_Konumlar.KONUM</td>
+                                        <td>@(((DateTime)x.TARIH).ToString("dd/MM/yyyy"))</td>
+                                        <td>@Html.ActionLink("Onayla", "Onayla", new { id = x.ID }, new { @class = "btn btn-success", onclick = "return confirm('Aktarma İşlemini Onaylamak İstediğinize Emin Misiniz?')" })</td>
+                                        <td>@Html.ActionLink("Reddet", "Reddet", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Aktarma İşlemini Reddetmek İstediğinize Emin Misiniz?')" })</td>
                                     </tr>
                                 </tbody>
                             }
@@ -70,6 +77,6 @@
 
 
 <script>
-    var zimmetlerim = document.getElementById('zimmetlerim');
-    zimmetlerim.classList.add('active');
+    var onaylar = document.getElementById('onaylar');
+    onaylar.classList.add('active');
 </script>
