--- a/Endmer/Views/Personel/PersonelEkle.cshtml
+++ b/Endmer/Views/Personel/PersonelEkle.cshtml
@@ -44,6 +44,26 @@
                                     </div>
                                 </div>
 
+                                <div class="row mb-3">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Kullanıcı Adı</label>
+                                        <input type="text" class="form-control" name="KULLANICIADI" placeholder="Kullanıcı adı.." required />
+                                    </div>
+
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Parola</label>
+                                        <input type="text" class="form-control" name="PAROLA" placeholder="Parola.." required />
+                                    </div>
+
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Yetki</label>
+                                        <select class="form-select" name="YETKI">
+                                            <option value="A">Admin</option>
+                                            <option value="P">Personel</option>
+                                        </select>
+                                    </div>
+                                </div>
+
                                 <div class="d-grid gap-2 mb-3">
                                     <input type="submit" value="Yeni Personel Ekle" class="btn btn-info" />
                                 </div>
