Zimmet aktarma işleminin admin tarafından onaylanması işlemi eklendi.

--- a/Endmer/Views/Zimmetlerim/Index.cshtml
+++ b/Endmer/Views/Zimmetlerim/Index.cshtml
@@ -52,7 +52,7 @@
                                         <td>@x.Tbl_Urunler.MARKA</td>
                                         <td>@x.Tbl_Urunler.MODEL</td>
                                         <td>@x.ADET</td>
-                                        <td>@x.ONAYMESAJ</td>
+                                        <td id="onayMesaj" style="padding: 5px;"><span class="onayRenk">@x.ONAYMESAJ</span></td>
                                         <td><a href="/Zimmetlerim/Aktar/@x.ID" class="btn btn-warning">Aktar</a></td>
                                     </tr>
                                 </tbody>
