--- a/Endmer/Views/Personel/PersonelGuncelle.cshtml
+++ b/Endmer/Views/Personel/PersonelGuncelle.cshtml
@@ -49,6 +49,28 @@
 
                                 </div>
 
+                                <div class="row mb-3">
+
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Kullanıcı Adı</label>
+                                        @Html.TextBoxFor(x => x.KULLANICIADI, new { @class = "form-control", @placeholder = "Kullanıcı adı..", @required = "required" })
+                                    </div>
+
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Parola</label>
+                                        @Html.TextBoxFor(x => x.PAROLA, new { @class = "form-control", @placeholder = "Parola..", @required = "required" })
+                                    </div>
+
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Yetki</label>
+                                        <select class="form-select" name="YETKI">
+                                            <option value="A">Admin</option>
+                                            <option value="P">Personel</option>
+                                        </select>
+                                    </div>
+
+                                </div>
+
                                 <div class="d-grid gap-2">
                                     <button class="btn btn-success">Güncelle</button>
                                 </div>
