Zimmet aktarma işleminde onay durumuna göre renklendirme yapıldı.

--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -43,22 +43,21 @@
             <ul class="navbar-nav">
 
 
-                <li class="nav-item">
-                    <a id="anasayfa" class="nav-link" href="/AnaSayfa/Index">
-                        <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                            <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
-                        </div>
-                        <span class="nav-link-text ms-1">Ana Sayfa</span>
-                    </a>
-                </li>
-
-
                 @if (User.IsInRole("A"))
                 {
                     <li class="nav-item">
+                        <a id="anasayfa" class="nav-link" href="/AnaSayfa/Index">
+                            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
+                            </div>
+                            <span class="nav-link-text ms-1">Ana Sayfa</span>
+                        </a>
+                    </li>
+
+                    <li class="nav-item">
                         <a id="zimmetler" class="nav-link " href="/Zimmetler/Index">
                             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                                <i class="ni ni-building text-danger text-sm opacity-10"></i>
+                                <i class="ni ni-folder-17 text-danger text-sm opacity-10"></i>
                             </div>
                             <span class="nav-link-text ms-1">Zimmetler</span>
                         </a>
@@ -67,7 +66,7 @@
                     <li class="nav-item">
                         <a id="onaylar" class="nav-link " href="/Onaylar/Index">
                             <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
-                                <i class="ni ni-building text-danger text-sm opacity-10"></i>
+                                <i class="ni ni-active-40 text-success text-sm opacity-10"></i>
                             </div>
                             <span class="nav-link-text ms-1">Onaylar</span>
                         </a>
@@ -130,8 +129,6 @@
                         </a>
                     </li>
                 }
-
-
 
 
             </ul>
