--- a/Endmer/Views/Personel/Index.cshtml
+++ b/Endmer/Views/Personel/Index.cshtml
@@ -8,6 +8,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{
+    string role = "";
+}
+
 <div class="container-fluid py-4">
     <div class="row">
         <div class="col-12">
@@ -42,17 +46,29 @@
                                     <th>Soyad</th>
                                     <th>Departman</th>
                                     <th>Lokasyon</th>
+                                    <th>Yetki</th>
                                     <th colspan="3">İşlemler</th>
                                 </tr>
                             </thead>
                             @foreach (var x in Model)
                             {
                                 <tbody align="center">
+                                    @{
+                                        if(x.YETKI == "A")
+                                        {
+                                            role = "Admin";
+                                        }
+                                        if (x.YETKI == "P")
+                                        {
+                                            role = "Personel";
+                                        }
+                                    }
                                     <tr>
                                         <td>@x.AD</td>
                                         <td>@x.SOYAD</td>
                                         <td>@x.Tbl_Departmanlar.DEPARTMAN</td>
                                         <td>@x.LOKASYON</td>
+                                        <td>@role</td>
                                         <td><a href="/Personel/PersonelGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
                                         <td>@Html.ActionLink("Sil", "PersonelSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Personeli Silmek İstediğinize Emin Misiniz?')" })</td>
                                         <td><a href="/Personel/PersonelZimmet/@x.ID" class="btn btn-primary">Zimmetler</a></td>
