--- a/Endmer/Views/Zimmetlerim/Index.cshtml
+++ b/Endmer/Views/Zimmetlerim/Index.cshtml
@@ -8,6 +8,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{
+    string color = "";
+}
+
 <div class="container-fluid py-4">
     <div class="row">
         <div class="col-12">
@@ -46,14 +50,28 @@
                             @foreach (var x in Model)
                             {
                                 <tbody align="center">
+                                    @{
+                                        if (x.ONAYMESAJ == "Zimmetli")
+                                        {
+                                            color = "border border-success rounded p-2 bg-success text-white";
+                                        }
+                                        if (x.ONAYMESAJ == "Onay Bekliyor")
+                                        {
+                                            color = "border border-warning rounded p-2 bg-warning text-white";
+                                        }
+                                        if (x.ONAYMESAJ == "Reddedildi")
+                                        {
+                                            color = "border border-danger rounded p-2 bg-danger text-white";
+                                        }
+                                    }
                                     <tr>
                                         <td><img src="@x.Tbl_Urunler.RESIM" class="img-fluid" /></td>
                                         <td>@x.Tbl_Urunler.URUNADI</td>
                                         <td>@x.Tbl_Urunler.MARKA</td>
                                         <td>@x.Tbl_Urunler.MODEL</td>
                                         <td>@x.ADET</td>
-                                        <td id="onayMesaj" style="padding: 5px;"><span class="onayRenk">@x.ONAYMESAJ</span></td>
-                                        <td><a href="/Zimmetlerim/Aktar/@x.ID" class="btn btn-warning">Aktar</a></td>
+                                        <td><span class="@color">@x.ONAYMESAJ</span></td>
+                                        <td><a href="/Zimmetlerim/Aktar/@x.ID" class="btn btn-primary">Aktar</a></td>
                                     </tr>
                                 </tbody>
                             }
