Araç ve ürün resim güncelleme işlemleri eklendi.

--- a/Endmer/Views/Araclar/AracDetay.cshtml
+++ b/Endmer/Views/Araclar/AracDetay.cshtml
@@ -18,8 +18,7 @@
                         <table class="table table-hover align-items-center mb-0">
                             <thead align="center">
                                 <tr>
-                                    <th>Teslim Eden</th>
-                                    <th>Teslim Alan</th>
+                                    <th>Aktif Kullanıcı</th>
                                     <th colspan="2">İŞLEMLER</th>
                                 </tr>
                             </thead>
@@ -28,7 +27,6 @@
                                 <tbody align="center">
                                     <tr>
                                         <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
-                                        <td>@x.Tbl_Personel1.AD @x.Tbl_Personel1.SOYAD</td>
                                         <td><a href="/Araclar/YeniKullanici/@x.ID" class="btn btn-success">Yeni Kullanıcı</a></td>
                                         <td><a href="/Araclar/Kayitlar/@x.ID" class="btn btn-warning">Kayıtlar</a></td>
                                     </tr>
