Yetki türüne göre sayfalara giriş izinleri ayarlandı.

--- a/Endmer/Views/Urunler/ZimmetSahipleri.cshtml
+++ b/Endmer/Views/Urunler/ZimmetSahipleri.cshtml
@@ -24,7 +24,7 @@
                                     <tr>
                                         <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
                                         <td>@x.ADET</td>
-                                        <td>@x.TARIH</td>
+                                        <td>@(((DateTime)x.TARIH).ToString("dd MMMM yyyy"))</td>
                                     </tr>
                                 </tbody>
                             }
